# C_progame_practice

./: .gitignore  README.md
Program_design_in_C/: Makefile  Square_root.c  calculate_area.c  main.c  separate.c  sum_n_avg.c  test_func.h
Program_design_in_C/Arrays/: enumerated_example.c  get_nth_prime.c  report_grade.c  report_grade.h  statistical_compute.c
Program_design_in_C/Arrays/practise/: IO_func.h  compute_gravity_center.c  gravity_data.txt  report_grade.c  report_grade.h  test.c
Program_design_in_C/Arrays/practise/com_func/: IO_func.c  IO_func.h
Program_design_in_C/String/: Whole_line_input.c  alphabetical_ordering_list.c  date_convertion.c  order_str_list_by_len.c  outfile  read_a_file_out_by_line.c  show_string_in_compound.c  test.txt
Program_design_in_C/collect_area_for_solar_heated_house/: collect_area_for_solar_heated_house.c  hdd.txt  solar.txt
Program_design_in_C/common_fractions/: fractions.c
Program_design_in_C/multitask/: CMakeLists.txt  consumer_producer_model.c  wait_child_process.c
Program_design_in_C/multitask/include/: exercise.h
Program_design_in_C/multitask/src/: create_new_thread_5.c  exercise_func.c  exercise_main.c
Program_design_in_C/structure/: Display_and_search.c  complex_numbers.c  complex_numbers.h
test_files/: CMakeLists.txt
test_files/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_main.cpp
